force-app/main/default/objects/custom_create148__c/custom_create148__c.object-meta.xml
<CustomObject>
    <label>Custom created object148</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects148</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>