force-app/main/default/objects/custom_create148__c/fields/custom_create_148field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_148field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 148field503</label>
    <type>Checkbox</type>
</CustomField>